--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section class="grid">
     <!-- Example game card -->
     <div class="game-card">
-      <img src="snake-thumbnail.png" alt="Snake Game">
+      <img src="snake image.png" alt="Snake Game">
       <h3>Snake</h3>
       <a href="snake/index.html">Play Now</a>
     </div>
@@ -93,4 +93,5 @@
   <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
 </body>
 </html>
+
 
