--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>REDOX GAMES HUB</title>
+  <title>My Free Games Hub</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -67,7 +67,7 @@
   </style>
 </head>
 <body>
-  <header>🎮 REDOX GAMES HUB 🎮</header>
+  <header>🎮 My Free Games Hub 🎮</header>
 
   <section class="grid">
     <!-- Example game card -->
@@ -90,8 +90,6 @@
     </div>
   </section>
 
-  <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
+  <footer>© 2025 My Free Games Hub | Built with ❤️</footer>
 </body>
 </html>
-
-
