--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="game-card">
       <img src="snake image.png" alt="Snake Game">
       <h3>Snake</h3>
-      <a href="snake/index.html">Play Now</a>
+      <a href="snake.html">Play Now</a>
     </div>
 
     <div class="game-card">
@@ -93,4 +93,5 @@
   <footer>© 2025 My Free Games Hub | Built with ❤️</footer>
 </body>
 </html>
+
 
