--- a/snake.html
+++ b/snake.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-<title>Smooth Snake — Touch + Keyboard</title>
+<title>SNAKE GAME</title>
 <style>
   :root{ --btn-bg:#007bff; --btn-hover:#0056b3; }
   body{
@@ -30,14 +30,15 @@
 </style>
 </head>
 <body>
-  <h2>Smooth Snake — Touch + Keyboard</h2>
+  <h2>SNAKE GAME</h2>
+  <h1>PRESS START TO PLAY</h1>
   <div id="gameWrap"><canvas id="game"></canvas></div>
   <div class="controls">
     <button id="startBtn" class="control">Start</button>
     <button id="pauseBtn" class="control">Pause</button>
     <button id="restartBtn" class="control">Restart</button>
   </div>
-  <div class="note">Swipe the canvas (or use arrow keys). Press Start to run the loop (moving starts on input).</div>
+  <div class="note">Swipe to move (or use arrow keys).(moving starts on input).</div>
 
 <script>
 /* ====== CONFIG ====== */
@@ -323,3 +324,4 @@ initGame();
 </script>
 </body>
 </html>
+
