--- a/snake.html
+++ b/snake.html
@@ -38,7 +38,7 @@
     <button id="pauseBtn" class="control">Pause</button>
     <button id="restartBtn" class="control">Restart</button>
   </div>
-  <div class="note">Swipe to move (or use arrow keys).(moving starts on input).</div>
+  <div class="note">Swipe to move (or use arrow keys).</div>
 
 <script>
 /* ====== CONFIG ====== */
@@ -324,4 +324,5 @@ initGame();
 </script>
 </body>
 </html>
+
 
