--- a/snake.html
+++ b/snake.html
@@ -321,8 +321,11 @@ restartBtn.onclick = ()=> { initGame(); };
 /* ====== Boot ====== */
 resizeCanvas();
 initGame();
+<audio id="eatSound" src="eat.mp3" preload="auto"></audio>
+<audio id="gameOverSound" src="gameover.mp3" preload="auto"></audio>
 </script>
 </body>
 </html>
+
 
 
