--- a/snake.html
+++ b/snake.html
@@ -321,11 +321,11 @@ restartBtn.onclick = ()=> { initGame(); };
 /* ====== Boot ====== */
 resizeCanvas();
 initGame();
-<audio id="eatSound" src="eat.mp3" preload="auto"></audio>
-<audio id="gameOverSound" src="gameover.mp3" preload="auto"></audio>
+<audio id="mixkit-hard-pop-click-2364.wav" src="mixkit-hard-pop-click-2364.wav" preload="auto"></audio>
 </script>
 </body>
 </html>
+
 
 
 
