--- a/snake.html
+++ b/snake.html
@@ -324,9 +324,11 @@ restartBtn.onclick = ()=> { initGame(); };
 resizeCanvas();
 initGame();
 <audio id="mixkit-hard-pop-click-2364.wav" src="mixkit-hard-pop-click-2364.wav" preload="auto"></audio>
+<audio id="mixkit-hard-pop-click-2364.wav" src="mixkit-hard-pop-click-2364.wav" preload="auto"></audio>
 </script>
 </body>
 </html>
+
 
 
 
