--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
   </style>
 </head>
 <body>
-  <header>🎮 My Free Games Hub 🎮</header>
+  <header>🎮 REDOX GAMES HUB 🎮</header>
 
   <section class="grid">
     <!-- Example game card -->
     <div class="game-card">
-      <img src="snake image.png" alt="Snake Game">
+      <img src="digital-art-snake-illustration.png" alt="Snake Game">
       <h3>Snake</h3>
       <a href="snake.html">Play Now</a>
     </div>
@@ -90,8 +90,9 @@
     </div>
   </section>
 
-  <footer>© 2025 My Free Games Hub | Built with ❤️</footer>
+  <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
 </body>
 </html>
+
 
 
