--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Free Games Hub</title>
+  <title>REDOX GAMES HUB</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -38,7 +38,7 @@
     }
     .game-card img {
       width: 100%;
-      height: 150px;
+      height: 200px;
       object-fit: cover;
     }
     .game-card h3 {
@@ -93,6 +93,7 @@
   <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
 </body>
 </html>
+
 
 
 
