--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     </div>
 
     <div class="game-card">
-      <img src="flappy-thumbnail.png" alt="Flappy Bird Clone">
+      <img src="NEON-DODGE-thumbnail.png" alt="NEON DODGE">
       <h3>Flappy Bird</h3>
-      <a href="flappy/index.html">Play Now</a>
+      <a href="dodge2.html">Play Now</a>
     </div>
 
     <div class="game-card">
@@ -93,6 +93,7 @@
   <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
 </body>
 </html>
+
 
 
 
