--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <div class="game-card">
       <img src="NEON-DODGE-thumbnail.png" alt="NEON DODGE">
-      <h3>Flappy Bird</h3>
+      <h3>NEON DODGE</h3>
       <a href="dodge2.html">Play Now</a>
     </div>
 
@@ -93,6 +93,7 @@
   <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
 </body>
 </html>
+
 
 
 
