--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="game-card">
-      <img src="NEON-DODGE-thumbnail.png" alt="NEON DODGE">
+      <img src="dodge neon photo.png" alt="NEON DODGE">
       <h3>Neon Dodge</h3>
       <a href="dodge2.html">Play Now</a>
     </div>
@@ -93,6 +93,7 @@
   <footer>© 2025 REDOX GAMES HUB | Built with ❤️</footer>
 </body>
 </html>
+
 
 
 
